fix(menu): recover overflow

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -48,7 +48,7 @@ a.@{prefix}-menu__item {
     flex: 1;
     display: flex;
     align-items: center;
-    overflow: auto hidden;
+    // overflow: auto hidden;
   }
 
   .@{prefix}-menu__operations {
@@ -376,7 +376,7 @@ a.@{prefix}-menu__item {
     .@{prefix}-menu {
       padding: 16px 8px;
       position: relative;
-      overflow: hidden auto;
+      // overflow: hidden auto;
       flex: 1;
 
       &--scroll {
